packages/web/src/components/spa/HackAUBG/SponsorsSection/sponsors_section.css
.sponsors-main {
    height: fit-content;
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.sponsors-containers {
    width: 80%;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.sponsors-header {
    margin-top: 3%;
    color: #19b700;
    font-family: 'Roboto';
    font-weight: 900;
    font-size: 2em;
}
/* Optimize the following css by grouping all containers that use the same code */

.platinum-container,
.gold-container,
.custom-container,
.silver-container,
.bronze-container {
    width: 20vw;
    height: fit-content;
    margin-top: 3%;
    text-align: center;
    z-index: 0;
    border: none;
    padding-left: 2%;
    padding-right: 2%;
}

.platinum-box,
.gold-box,
.silver-box,
.custom-box,
.bronze-box {
    width: 100%;
    height: fit-content;
    max-width: 1000px;
    padding: 4vw;
    border-style: solid;
    border-width: 8px;
    display: flex;
    /* flex-direction: column; */
    justify-content: center;
    align-items: center;
}

.logo-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 23%;
}

.logo-container img {
    cursor: pointer;
    width: 30%;
    margin: 4% 2%;
}

.platinum-container {
    background-color: #00b79a;
}

.platinum-box {
    border-color: #00b79a;
}

.platinum-header {
    color: #00b79a;
}

.gold-container {
    background-color: #c9b037;
}

.gold-box {
    border-color: #c9b037;
}

.gold-header {
    color: #c9b037;
}

.custom-container {
    background-color: #cdbaba;
}

.custom-box {
    border-color: #cdbaba;
}

.custom-header {
    color: #cdbaba;
}

.silver-header {
    color: #b4b4b4;
}

.silver-container {
    background-color: #b4b4b4;
}

.silver-box {
    border-color: #b4b4b4;
}

.bronze-header {
    color: rgb(163, 104, 37);
}

.bronze-container {
    background-color: rgb(163, 104, 37);
}

.bronze-box {
    border-color: rgb(163, 104, 37);
}

@media (max-width: 600px) {
    .sponsors-container {
        font-size: 1.1em;
    }
    .platinum-container,
    .custom-container,
    .gold-container,
    .silver-container,
    .bronze-container {
        width: 45vw;
    }
}

